Fixed ie's lack of respect for overflow: hidden.
git-svn-id: https://opensource.kantega.no/svn/openaksess/trunk@1303 fd808399-8219-4f14-9d4c-37719d9ec93d

--- a/modules/webapp/src/webapp/admin/css/default_ie7.css
+++ b/modules/webapp/src/webapp/admin/css/default_ie7.css
@@ -3,3 +3,9 @@
 }
 /* Fix because ie7 can't handle floats properly */
 #TopMenu a.menuitem.logout, #TopMenu a.menuitem.help { position:relative; top:-29px }
+
+
+
+#PropertiesTable .property {
+    word-wrap: break-word;
+}
